Add (currently unfinished) gallery view code

--- a/LifeSharpAndroid/LifeSharpAndroid.csproj
+++ b/LifeSharpAndroid/LifeSharpAndroid.csproj
@@ -60,6 +60,9 @@
     <Reference Include="Xamarin.Android.Support.v4">
       <HintPath>..\packages\Xamarin.Android.Support.v4.23.2.1\lib\MonoAndroid403\Xamarin.Android.Support.v4.dll</HintPath>
     </Reference>
+    <Reference Include="Xamarin.Android.Support.v7.RecyclerView">
+      <HintPath>..\packages\Xamarin.Android.Support.v7.RecyclerView.23.2.1\lib\MonoAndroid403\Xamarin.Android.Support.v7.RecyclerView.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Resources\Resource.designer.cs" />
@@ -73,6 +76,7 @@
     <Compile Include="ImageQueue.cs" />
     <Compile Include="ImageQueueAndroid.cs" />
     <Compile Include="Utils.cs" />
+    <Compile Include="GalleryActivity.cs" />
     <Compile Include="StreamService.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -89,6 +93,7 @@
     <AndroidResource Include="Resources\drawable-xhdpi\Icon.png" />
     <AndroidResource Include="Resources\drawable-xxhdpi\Icon.png" />
     <AndroidResource Include="Resources\drawable-xxxhdpi\Icon.png" />
+    <AndroidResource Include="Resources\layout\Gallery.axml" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
