Split out user-specific / private config into Config[.template].cs

--- a/LifeSharpAndroid/LifeSharpAndroid.csproj
+++ b/LifeSharpAndroid/LifeSharpAndroid.csproj
@@ -92,6 +92,7 @@
       <Link>Core\Protocol.cs</Link>
     </Compile>
     <Compile Include="GCMIntentService.cs" />
+    <Compile Include="Config.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
