Add file upload support as well as some temporary fixes for the messy flow control of services

--- a/LifeSharpAndroid/LifeSharpAndroid.csproj
+++ b/LifeSharpAndroid/LifeSharpAndroid.csproj
@@ -93,6 +93,7 @@
     </Compile>
     <Compile Include="GCMIntentService.cs" />
     <Compile Include="Config.cs" />
+    <Compile Include="UploadService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
