--- a/LifeSharpAndroid/packages.config
+++ b/LifeSharpAndroid/packages.config
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Xamarin.Android.Support.v4" version="23.3.0" targetFramework="MonoAndroid44" />
-  <package id="Xamarin.Android.Support.v7.RecyclerView" version="23.3.0" targetFramework="MonoAndroid44" />
-  <package id="Xamarin.GooglePlayServices.Base" version="29.0.0.1" targetFramework="MonoAndroid44" />
-  <package id="Xamarin.GooglePlayServices.Basement" version="29.0.0.1" targetFramework="MonoAndroid44" />
-  <package id="Xamarin.GooglePlayServices.Gcm" version="29.0.0.1" targetFramework="MonoAndroid44" />
-  <package id="Xamarin.GooglePlayServices.Measurement" version="29.0.0.1" targetFramework="MonoAndroid44" />
+  <package id="ModernHttpClient" version="2.4.2" targetFramework="MonoAndroid" />
+  <package id="Xamarin.Android.Support.v4" version="23.4.0" targetFramework="MonoAndroid44" />
+  <package id="Xamarin.Android.Support.v7.RecyclerView" version="23.4.0" targetFramework="MonoAndroid44" />
+  <package id="Xamarin.GooglePlayServices.Base" version="29.0.0.2" targetFramework="MonoAndroid44" />
+  <package id="Xamarin.GooglePlayServices.Basement" version="29.0.0.2" targetFramework="MonoAndroid44" />
+  <package id="Xamarin.GooglePlayServices.Gcm" version="29.0.0.2" targetFramework="MonoAndroid44" />
+  <package id="Xamarin.GooglePlayServices.Measurement" version="29.0.0.2" targetFramework="MonoAndroid44" />
 </packages>
