--- a/LifeSharpAndroid/LifeSharpAndroid.csproj
+++ b/LifeSharpAndroid/LifeSharpAndroid.csproj
@@ -99,6 +99,7 @@
     <Compile Include="Config.cs" />
     <Compile Include="UploadService.cs" />
     <Compile Include="DownloadService.cs" />
+    <Compile Include="ReceiveBoot.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
