--- a/LifeSharpAndroid/LifeSharpAndroid.csproj
+++ b/LifeSharpAndroid/LifeSharpAndroid.csproj
@@ -100,6 +100,7 @@
     <Compile Include="UploadService.cs" />
     <Compile Include="DownloadService.cs" />
     <Compile Include="ReceiveBoot.cs" />
+    <Compile Include="ConfigureNotificationsActivity.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -119,6 +120,7 @@
     <AndroidResource Include="Resources\drawable-xhdpi\Search.png" />
     <AndroidResource Include="Resources\drawable-xhdpi\TransferDown.png" />
     <AndroidResource Include="Resources\drawable-xhdpi\TransferUp.png" />
+    <AndroidResource Include="Resources\layout\ConfigureNotifications.axml" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Import Project="..\packages\Xamarin.GooglePlayServices.Basement.29.0.0.2\build\Xamarin.GooglePlayServices.Basement.targets" Condition="Exists('..\packages\Xamarin.GooglePlayServices.Basement.29.0.0.2\build\Xamarin.GooglePlayServices.Basement.targets')" />
