--- a/LifeSharpAndroid/Properties/AndroidManifest.xml
+++ b/LifeSharpAndroid/Properties/AndroidManifest.xml
@@ -1,6 +1,6 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="net.kayateia.lifesharp">
-	<uses-sdk />
+	<uses-sdk android:minSdkVersion="14" />
 	<application android:label="LifeSharp" android:theme="@style/AppTheme">
 		<receiver android:name="com.google.android.gms.gcm.GcmReceiver" android:exported="true" android:permission="com.google.android.c2dm.permission.SEND">
 			<intent-filter>
