--- a/LifeSharpAndroid/packages.config
+++ b/LifeSharpAndroid/packages.config
@@ -4,6 +4,7 @@
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.4.0.1" targetFramework="MonoAndroid50" />
   <package id="Xamarin.Android.Support.v4" version="23.4.0.1" targetFramework="MonoAndroid50" />
   <package id="Xamarin.Android.Support.v7.AppCompat" version="23.4.0.1" targetFramework="MonoAndroid50" />
+  <package id="Xamarin.Android.Support.v7.CardView" version="23.4.0.1" targetFramework="MonoAndroid50" />
   <package id="Xamarin.Android.Support.v7.RecyclerView" version="23.4.0.1" targetFramework="MonoAndroid50" />
   <package id="Xamarin.Android.Support.Vector.Drawable" version="23.4.0.1" targetFramework="MonoAndroid50" />
   <package id="Xamarin.GooglePlayServices.Base" version="29.0.0.2" targetFramework="MonoAndroid50" />
