--- a/LifeSharpAndroid/LifeSharpAndroid.csproj
+++ b/LifeSharpAndroid/LifeSharpAndroid.csproj
@@ -114,6 +114,7 @@
     <Compile Include="ReceiveBoot.cs" />
     <Compile Include="ConfigureNotificationsActivity.cs" />
     <Compile Include="UserGalleryActivity.cs" />
+    <Compile Include="DynamicImageView.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -141,6 +142,7 @@
     <AndroidResource Include="Resources\layout\ConfigureNotifications.axml" />
     <AndroidResource Include="Resources\layout\GalleryCardView.axml" />
     <AndroidResource Include="Resources\layout\GalleryImageTile.axml" />
+    <AndroidResource Include="Resources\values\attrs.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Android.Support.Vector.Drawable.23.4.0.1\build\Xamarin.Android.Support.Vector.Drawable.targets" Condition="Exists('..\packages\Xamarin.Android.Support.Vector.Drawable.23.4.0.1\build\Xamarin.Android.Support.Vector.Drawable.targets')" />
