Refactor threading and memory handling from UserGalleryAdapter into separate base class
- Don't use a WeakReference for the ImageView in ViewHolder.SetImageViewTarget(); a strong reference to the ImageView already exists as a member variable of ViewHolder.
- Confirm that the decoded bitmap hasn't already been recycled in another thread before setting an ImageView to display it.
-

--- a/LifeSharpAndroid/LifeSharpAndroid.csproj
+++ b/LifeSharpAndroid/LifeSharpAndroid.csproj
@@ -115,6 +115,7 @@
     <Compile Include="UserGalleryActivity.cs" />
     <Compile Include="DynamicImageView.cs" />
     <Compile Include="Utils.cs" />
+    <Compile Include="RecyclerGalleryView.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
