--- a/LifeSharpAndroid/LifeSharpAndroid.csproj
+++ b/LifeSharpAndroid/LifeSharpAndroid.csproj
@@ -116,6 +116,8 @@
     <Compile Include="DynamicImageView.cs" />
     <Compile Include="Utils.cs" />
     <Compile Include="RecyclerGalleryView.cs" />
+    <Compile Include="ImagePagerActivity.cs" />
+    <Compile Include="ImagePager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -144,6 +146,8 @@
     <AndroidResource Include="Resources\layout\GalleryCardView.axml" />
     <AndroidResource Include="Resources\layout\GalleryImageTile.axml" />
     <AndroidResource Include="Resources\values\attrs.xml" />
+    <AndroidResource Include="Resources\layout\ImageViewPager.axml" />
+    <AndroidResource Include="Resources\layout\SingleImageView.axml" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Android.Support.Vector.Drawable.23.4.0.1\build\Xamarin.Android.Support.Vector.Drawable.targets" Condition="Exists('..\packages\Xamarin.Android.Support.Vector.Drawable.23.4.0.1\build\Xamarin.Android.Support.Vector.Drawable.targets')" />
